Bug 516665 disorted images with moz-icon://*?size=dialog r=bobbyholley